--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>The Booleaner</title>
 </head>
 <body>
-    
+    <header>
+        <div id="background-header">
+            <img id="logo" src="./img/logo.svg" alt="">    
+        </div>
+    </header>  
 </body>
 </html>
