--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>The Booleaner</title>
 </head>
 <body>
+
+    <!-- Inizio Header -->
     <header>
         <div id="background-header">
             <img id="logo" src="./img/logo.svg" alt="">    
         </div>
-    </header>  
+
+        <!-- Titolo -->
+        <h1>Intenet deve essere al servizio del "bene pubblico": il manifesto di Tim Berneres-Lee</h1>
+        <h2>Scritto da <span id="autore">The Booleaner</span></h2>
+        <p>Scritto il 10/10/2020</p>
+    </header>
+    <!-- Fine Header -->
+    
+    
 </body>
 </html>
