Corretto il nome di Tim nel Titolo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <!-- Titolo -->
-                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berneres-Lee</h1>
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
                 <h2>Scritto da <span id="autore">The Booleaner</span></h2>
                 <p id="data">Scritto il 10/10/2020</p>
             </header>
